新增退货单页面报错

--- a/core/app/views/Refunds/blank.html
+++ b/core/app/views/Refunds/blank.html
@@ -106,7 +106,7 @@
           <tr class="text-center" id="unit_${unit.id}">
             <td>
               <input type="checkbox" name="ck" value="${unit.id}">
-              <input type="hidden" name="dtos[${unit_index-1}].unit.id" value="${unit.id}">
+              <input type="hidden" name="dtos[${unit_index-1}].unitId" value="${unit.id}">
             </td>
             <td>${unit.id}</td>
             <td>${unit.deliveryment?.id}</td>
