--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -174,7 +174,7 @@
           </li>
         #{/power.ck}
 
-        #{power.ck 'saletarget'}
+*{        #{power.ck 'saletarget'}
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">目标管理<b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -183,7 +183,7 @@
                 #{/power.ck}
             </ul>
           </li>
-        #{/power.ck}
+        #{/power.ck}}*
 
 *{        #{power.ck 'qccheck'}
           <li class="dropdown">
