--- a/core/app/views/Payments/_procreApply.html
+++ b/core/app/views/Payments/_procreApply.html
@@ -19,7 +19,7 @@
       <th>交货日期</th>
       <th>SKU</th>
       <th>单价</th>
-      <th>数量</th>
+      <th>数量(计划/交货/入库)</th>
       <th>付款类型</th>
       <th>总额修正价</th>
       <th>付款金额</th>
@@ -35,7 +35,7 @@
             #{set denyRecords: fee.denyRecords()/}
           <td><input type="checkbox" name="paymentUnitIds" value="${fee.id}"></td>
           <td ${((records.size() + denyRecords.size()) > 0) ? 'data-toggle=\'toggle\'' : ''} data-target='#unit_${fee.id}'
-            width="200px;">
+                                                                                             width="200px;">
               #{if (records.size() + denyRecords.size()) > 0}
                 <i class="icon-reorder"></i>
               #{/if}
@@ -46,7 +46,9 @@
           <td>${punit.attrs.deliveryDate}</td>
           <td>${punit.sku}</td>
           <td>${payment.currency.symbol()} ${punit.attrs.price}</td>
-          <td>${punit.qty()}</td>
+          <td style="color:${punit.attrs.planQty!=punit.inboundQty && punit.inboundQty>0 ? 'red':''}">
+          ${punit.attrs.planQty}/${punit.attrs.qty?:0}/${punit.inboundQty}
+          </td>
           <td>${fee.feeType.nickName}</td>
           <td>${payment.currency.symbol()} ${fee.fixValue}</td>
           <td>${payment.currency.symbol()} ${fee.amount()}</td>
