--- a/core/app/views/Outbounds/edit.html
+++ b/core/app/views/Outbounds/edit.html
@@ -1,6 +1,8 @@
 #{extends 'main_full.html' /}
 #{set title:'编辑出库单' /}
 #{set 'moreScripts'}
+    #{script 'jquery.filedrop.js'/}
+    #{script 'component/dropUpload.coffee'/}
     #{script 'outbounds/blank.js'/}
 #{/set}
 <style>
@@ -125,18 +127,21 @@
 #{info_row title:'已添加进入【出库单】的【采购单元】'/}
 <div class="row-fluid">
   <div class="span12">
-    #{if outbound.type.name().equals("Normal")}
+  #{if outbound.type.name().equals("Normal")}
       #{render 'Outbounds/_units.html', units:outbound.units, is_check: true/}
-    #{/if}
-    #{else }
+  #{/if}
+  #{else }
       #{render 'Outbounds/_records.html', records:outbound.records/}
-    #{/else}
+  #{/else}
 
   #{if outbound.status.name()=='Create'}
       #{power.ck 'outbounds.delete'}
         <button class="btn btn-danger" id="deleteBtn">解除</button>
       #{/power.ck}
   #{/if}
+  #{else }
+    <button class="btn btn-warning" id="cancelBtn">撤销出库</button>
+  #{/else}
   </div>
 </div>
 <br>
@@ -168,3 +173,15 @@
 </div>
 
 #{/if}
+
+<div class="row-fluid">
+  <div class="span12">
+    <h4 class="alert alert-success">附件 <i class="icon-sort-down"></i></h4>
+  </div>
+</div>
+<div class="row-fluid">
+  <div style="min-height:300px;" class="span12 well" id="dropbox">
+    <ul class="thumbnails uploaded"></ul>
+    <div class="message" style="height:150px;padding-top:145px;text-align:center;">Drag & Drop</div>
+  </div>
+</div>
