--- a/core/app/views/Outbounds/index.html
+++ b/core/app/views/Outbounds/index.html
@@ -1,6 +1,8 @@
 #{extends 'main_full.html' /}
 #{set title:"出库单列表"  /}
 #{set 'moreScripts'}
+    #{script 'jquery.filedrop.js'/}
+    #{script 'component/dropUpload.coffee'/}
     #{script 'component/pagination.coffee'/}
     #{script 'outbounds/blank.js'/}
     #{script 'outbounds/index.es6'/}
