--- a/core/app/views/Outbounds/otherBlank.html
+++ b/core/app/views/Outbounds/otherBlank.html
@@ -1,6 +1,8 @@
 #{extends 'main_full.html' /}
 #{set title:'其它出库单' /}
 #{set 'moreScripts'}
+    #{script 'jquery.filedrop.js'/}
+    #{script 'component/dropUpload.coffee'/}
     #{script 'outbounds/blank.js'/}
 #{/set}
 <style>
