--- a/core/app/views/ProcureUnits/edit.html
+++ b/core/app/views/ProcureUnits/edit.html
@@ -38,13 +38,14 @@
       <tr>
         <td colspan="6">
           <input type="hidden" id="oldPlanQty" name="oldPlanQty" value="${oldPlanQty}">
-
-          <div class="input-append">
-            <input type="text" name="msg" value="${msg}" placeholder="简要填写变更的原因">
-            <button type="submit" class="btn btn-primary" rel="popover" content="当[采购计划的FBA]已生成后再修改[运输方式]或[采购数量]时必须填写原因" placement="right" data-loading>
-              更新
-            </button>
-          </div>
+          <select name="msg" class="inline">
+            <option value="">变更原因</option>
+            <option value="供应商原因">供应商原因</option>
+            <option value="我司原因">我司原因</option>
+          </select>
+          <button type="submit" class="btn btn-primary" rel="popover" content="当[采购计划的FBA]已生成后再修改[运输方式]或[采购数量]时必须填写原因" placement="right" data-loading>
+            更新
+          </button>
         </td>
       </tr>
     </table>
