修改 销量分析 线条，显示为出库数量

--- a/core/app/views/gt_templates/event_desc.html
+++ b/core/app/views/gt_templates/event_desc.html
@@ -86,7 +86,7 @@
             <li>
               <a href="${unit.fba.fbaLink()}" target="_blank">${unit.fba.shipmentId}</a>
               <abbr rel='tooltip' title='入库数量 / 运输数量'>
-                [${shipItem.recivedQty} / ${shipItem.qty}]
+                [${shipItem.recivedQty} / ${shipItem.unit.outQty}]
               </abbr>
             </li>
           #{/list}
