解决撤销出库按钮，全选报错

--- a/core/app/views/Deliveryments/_box_number_model.html
+++ b/core/app/views/Deliveryments/_box_number_model.html
@@ -9,7 +9,7 @@
   </div>
   <div class="modal-footer">
     <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
-    <a class="btn btn-primary" id="sumbitDownloadFBAZIP">提交</a>
+    <a class="btn btn-primary" id="submitDownloadFBAZIP">提交</a>
   </div>
 </div>
 
