--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -30,7 +30,7 @@
     </th>
     <th>剩余请款金额</th>
   #{/ifnot}
-    <th rel="popover" content="<img src='/img/helper/fnsku.png'/>" width="auto">FnSku</th>
+    <th rel="popover" content="<img src='/img/helper/fnsku.png'/>" width="100px;">FnSku</th>
     <th>运输方式</th>
     <th>预计交货时间</th>
     <th>预计运输时间</th>
