--- a/core/app/views/tags/select_enum.html
+++ b/core/app/views/tags/select_enum.html
@@ -6,7 +6,7 @@
     native
 #{/if}
 #{else }
-    size="1" name="${_name}" class="${_class}">
+    name="${_name}" class="${_class}">
 #{/else}>
 #{doBody /}
 #{list items:_items}
