质检取样 方法删除

--- a/core/app/views/ProcureUnits/_unit_table_trs.html
+++ b/core/app/views/ProcureUnits/_unit_table_trs.html
@@ -117,7 +117,7 @@
   </td>
   <th>质检取样</th>
   <td>
-    <input type="text" class="span3" value="${unit.fetchCheckTaskQcSample()}" readonly/>
+    <input type="text" class="span3" value="" readonly/>
     <span class="add-on">个</span>
   </td>
 </tr>
