采购计划导出列表数据

--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -56,9 +56,9 @@
                 #{power.ck "sellingrecords.index"}
                   <li><a href="@{SellingRecords.index()}">销售财务分析</a></li>
                 #{/power.ck}
-*{                #{power.ck "amazonoperations"}
+                #{power.ck "amazonoperations"}
                   <li><a href="@{AmazonOperations.index()}">Review 点击台</a></li>
-                #{/power.ck}}*
+                #{/power.ck}
                 #{power.ck "reportdownloads"}
                   <li><a href="@{ReportDownloads.index()}">运营报表下载</a></li>
                 #{/power.ck}
