出库撤销页面 全选功能修复，已经物流付款单页面调整

--- a/core/app/views/Outbounds/_records.html
+++ b/core/app/views/Outbounds/_records.html
@@ -1,6 +1,6 @@
 <table class="table table-condensed table-bordered" id="data_table">
   <tr>
-    <td><input type="checkbox"></td>
+    <td><input type="checkbox" id="checkbox_all" class="checkall" value=""></td>
     <th>采购计划ID</th>
     <th>采购单</th>
     <th>Selling</th>
