--- a/core/app/views/Outbounds/_units.html
+++ b/core/app/views/Outbounds/_units.html
@@ -1,11 +1,7 @@
 <table class="table table-condensed table-bordered" id="data_table">
   <tr>
   #{if is_check}
-    <th>
-      <label class="checkbox">
-        <input type="checkbox" id="checkbox_all" class="checkall">
-      </label>
-    </th>
+    <th><input type="checkbox" id="checkbox_all" class="checkall" value=""></th>
   #{/if}
     <th>采购ID</th>
     <th>采购单</th>
