--- a/core/app/views/Outbounds/otherBlank.html
+++ b/core/app/views/Outbounds/otherBlank.html
@@ -101,7 +101,11 @@
   <div class="span12">
     <table class="table table-condensed table-bordered" id="data_table">
       <tr>
-        <th><input type="checkbox"></th>
+        <th>
+          <label class="checkbox">
+            <input type="checkbox" id="checkbox_all" class="checkall" value="">
+          </label>
+        </th>
         <th>采购计划ID</th>
         <th>采购单</th>
         <th>Selling</th>
