--- a/core/app/views/Payments/_transportApply.html
+++ b/core/app/views/Payments/_transportApply.html
@@ -5,17 +5,17 @@
   <table class="table table-bordered table-condensed">
     <tr>
       <th></th>
-      <th width="120px;">关联运输资料</th>
-      <th>实际到货时间</th>
-      <th class="span2">费用类型</th>
+      <th width="200px;">关联运输资料</th>
+      <th width="150px;">实际到货时间</th>
+      <th width="150px;">费用类型</th>
       <th>币种</th>
       <th>单价</th>
       <th>数量</th>
       <th>均价</th>
       <th>总价</th>
-      <th>质检结果</th>
-      <th class="span2">状态</th>
-      <th class='span3'>#</th>
+      <th width="100px;">质检结果</th>
+      <th width="100px;">状态</th>
+      <th width="240px;">#</th>
     </tr>
   #{list items: units, as:'fee'}
     <tr>
