下载箱外麦的时候，重量和长宽高 根据申请FBA时填写的 自动生成

--- a/core/app/views/FBAs/boxLabel.html
+++ b/core/app/views/FBAs/boxLabel.html
@@ -18,7 +18,7 @@
             #{render './brandworlShipmentDetail.html', procureUnit: procureUnit/}
         #{/if}
             #{else}
-        #{render './shipmentDetail.html', procureUnit: procureUnit/}
+        #{render './shipmentDetail.html', procureUnit: procureUnit, box_num:i/}
     #{/else}
     </td>
     <td width="2%"></td>
