--- a/core/app/views/FBAs/shipmentDetail.html
+++ b/core/app/views/FBAs/shipmentDetail.html
@@ -41,25 +41,25 @@
       <table border="0" width="100%" style="border: none;margin:0 0 0 0;padding:0;">
         <tr>
           <td width="8%">箱号</td>
-          <td width="8%" style="border:1px solid #000000; padding-left:6px;">
-
-          </td>
-          <td width="8%" style="text-align:left;">
-            去往国家
-          </td>
+          <td width="8%" style="border:1px solid #000000; padding-left:6px;">${box_num}</td>
+          <td width="8%" style="text-align:left;">去往国家</td>
           <td width="12%" style="border:1px solid #000000; padding-left:6px;">
           ${procureUnit?.selling?.market?.countryName()}
           </td>
-          <td width="8%">
-            整箱重量
-          </td>
+          <td width="8%">整箱重量</td>
           <td width="13%" style="border:1px solid #000000; padding-left:6px;">
-          </td>
+          #{if procureUnit.fba!=null && procureUnit.fba.fbaCartonContents!=null}
+                ${procureUnit.fba.dto.singleBoxWeight} ${procureUnit.selling?.market.name()=='AMAZON_US'?'lb.':'kg'}
+            #{/if}
           <td width="10%" style="line-height:0.7em;">
             箱子体积<br>
-            <span style="font-size:3pt">长×宽×高CM</span>
+            <span style="font-size:3pt">长×宽×高</span>
           </td>
           <td style="border:1px solid #000000; padding-left:6px;">
+          #{if procureUnit.fba!=null && procureUnit.fba.fbaCartonContents!=null}
+            <span style="font-size:5pt">${procureUnit.fba.dto?.length} x  ${procureUnit.fba.dto?.width}
+              x ${procureUnit.fba.dto?.height}</span> ${procureUnit.selling?.market.name()=='AMAZON_US'?'in.':'CM'}
+          #{/if}
           </td>
         </tr>
       </table>
@@ -93,8 +93,7 @@
           <td>
           ${procureUnit?.selling?.fnSku}
           </td>
-          <td>
-          </td>
+          <td></td>
         </tr>
         <tr>
           <td height="100%;" colspan="4" style="vertical-align:top;text-align:left;">
