修复采购单页面时间显示错误

--- a/core/app/views/Deliveryments/show.html
+++ b/core/app/views/Deliveryments/show.html
@@ -65,11 +65,11 @@
             <td>${dmt.cooperator?.name}</td>
             <th>下单时间</th>
             <td>
-              <input type="date" name="dmt.orderTime" value="${dmt.orderTime?.datetime()}">
+              <input type="date" name="dmt.orderTime" value="${dmt.orderTime?.date()}">
             </td>
             <th>交货时间</th>
             <td>
-              <input type="date" name="dmt.deliveryTime" value="${dmt.deliveryTime?.datetime()}">
+              <input type="date" name="dmt.deliveryTime" value="${dmt.deliveryTime?.date()}">
             </td>
           </tr>
 
