多市场涉及功能修改

--- a/core/app/views/Whouses/index.html
+++ b/core/app/views/Whouses/index.html
@@ -1,65 +1,52 @@
 #{extends 'main.html'/}
-#{set title:'Whouse(' + whs.size() + ')'/}
+#{set title:'Whouse(' + models.whouse.Whouse.count() + ')'/}
 #{set 'moreScripts'}
 #{/set}
 #{flash_alert /}
 #{info_row title:'仓库' /}
-<div class="row-fluid">
-  <div class="span12">
-    <table class="table table-condensed table-bordered">
-      <tr>
-        <th>#</th>
-        <th>Name</th>
-        <th>City</th>
-        <th>Province</th>
-        <th>PostCode</th>
-        <th>Country</th>
-        <th>Type</th>
-        <th>Ship Type</th>
-        <th>Account</th>
-        <th width="120px;">Action</th>
-      </tr>
-    #{list items:whs, as:'wh'}
-      <tr>
-        <td>${wh.id}</td>
-        <td data-toggle="toggle" data-target="#whouse_${wh.id}"><i class="icon-reorder"></i> ${wh.name}</td>
-        <td>${wh.city}</td>
-        <td>${wh.province}</td>
-        <td>${wh.postalCode}</td>
-        <td>${wh.country}</td>
-        <td>${wh.type}</td>
-        <td>
-            #{if wh.isAIR}<span style="color:#49A4C6">空运</span>#{/if}
-            #{if wh.isSEA}<span style="color:#C09853">海运</span>#{/if}
-            #{if wh.isEXPRESS}<span style="color:#468847">快递</span>#{/if}
-        </td>
-        <td>${wh.account?.prettyName()}</td>
-        <td>
-          <a href="@{Whouses.edit()}/${wh.id}" class="btn btn-mini btn-warning">Update</a>
-          <a href="@{Whouses.del(wh.id)}" class="btn btn-mini btn-danger">DEL</a>
-        </td>
-      </tr>
-      <tr id="whouse_${wh.id}" style="display:none;">
-        <td colspan="10">
-          <div class="row-fluid">
-            <div class="span6" style="display:inline-block;">
-              <h4 class="text-info">Memo:</h4>
-            ${wh.memo}
-            </div>
-            <div class="span6" style="display:inline-block;">
-              <h4>Address</h4>
-            ${wh.address}
-            </div>
-          </div>
-        </td>
-      </tr>
-    #{/list}
-    </table>
+
+<ul class="nav nav-tabs">
+  <li class="active">
+    <a href="#amazon" data-toggle='tab'>FBA仓库</a>
+  </li>
+  <li>
+    <a href="#SELF" data-toggle='tab'>品拓仓库</a>
+  </li>
+  <li>
+    <a href="#NO_FBA" data-toggle='tab'>综合仓</a>
+  </li>
+  <li>
+    <a href="#FORWARD" data-toggle='tab' id="showFeeds">货代仓库</a>
+  </li>
+  <li>
+    <a href="#B2B" data-toggle='tab' id="showFeedsButton">B2B仓库</a>
+  </li>
+</ul>
+
+<div class="tab-content">
+  <div class="tab-pane fade active in" id='amazon'>
+  #{render 'Whouses/_whouse_list.html', whs: models.whouse.Whouse.findByType(models.whouse.Whouse.T.FBA)/}
+  </div>
+
+  <div class="tab-pane fade" id='SELF'>
+  #{render 'Whouses/_whouse_list.html', whs: models.whouse.Whouse.findByType(models.whouse.Whouse.T.SELF)/}
+  </div>
+
+  <div class="tab-pane fade" id='NO_FBA'>
+  #{render 'Whouses/_whouse_list.html', whs: models.whouse.Whouse.findByType(models.whouse.Whouse.T.NO_FBA)/}
+  </div>
+
+  <div class="tab-pane fade" id='FORWARD'>
+  #{render 'Whouses/_whouse_list.html', whs: models.whouse.Whouse.findByType(models.whouse.Whouse.T.FORWARD)/}
+  </div>
+
+  <div class="tab-pane fade" id='B2B'>
+  #{render 'Whouses/_whouse_list.html', whs: models.whouse.Whouse.findByType(models.whouse.Whouse.T.B2B)/}
   </div>
 </div>
+
 <div class="row-fluid">
   <div class="span12">
     <a href="@{Whouses.blank()}" class="btn btn-primary">添加仓库</a>
   </div>
-  &nbsp;
 </div>
