--- a/core/app/views/Cooperators/newCooperItem.html
+++ b/core/app/views/Cooperators/newCooperItem.html
@@ -26,7 +26,7 @@
   <form action="${action}" method="post" autocomplete="off">
     <table class="table table-condensed table-bordered" id="form_table">
       <tr>
-        <td>SKU</td>
+        <th>SKU</th>
         <td>
           <input type="text" id='copItem_sku' name="copItem.sku" data-provide="typeahead" data-source="${skus}" placeHolder="填写 SKU" value="${copItem.sku}">
           <input type="hidden" name="cooperId" value="${cop.id}">
@@ -34,7 +34,7 @@
         #{authenticityToken /}
         </td>
 
-        <td>价格</td>
+        <th>价格</th>
         <td>
           <div class="inline">
             <input class="input input-mini" type="text" name="copItem.price" value="${copItem.price}">
@@ -42,12 +42,22 @@
           </div>
         </td>
       </tr>
+      <tr>
+        <th>其他价格</th>
+        <td>
+          <input class="input input-mini" type="text" name="copItem.otherPrice" value="${copItem.otherPrice}">
+          <select class="input-mini">
+            <option value="CNY">CNY</option>
+          </select>
+        </td>
+        <th></th>
+        <td></td>
+      </tr>
 
       <tr>
-        <td>生产周期(day)</td>
+        <th>生产周期(day)</th>
         <td><input type="text" class="input-mini" name="copItem.period" value="${copItem.period}"></td>
-
-        <td>最低采购量</td>
+        <th>最低采购量</th>
         <td><input type="text" class="input-mini" name="copItem.lowestOrderNum" value="${copItem.lowestOrderNum}"></td>
       </tr>
     #{if copItem.items != null && copItem.items.size() > 0}
@@ -57,32 +67,32 @@
               <div class="alert alert-info" id="add_div_${item_index}"><h4>方案${dto_index}(${dto.schemeName})</h4></div>
               <table class="table table-condensed table-bordered" id="add_table_${item_index}">
                 <tr>
-                  <td>每箱数量</td>
+                  <th>每箱数量</th>
                   <td>
                     <input type="text" class="input-mini" name="copItem.items[${dto_index-1}].boxSize" value="${dto.boxSize}">
                   </td>
-                  <td>单箱重量</td>
+                  <th>单箱重量</th>
                   <td>
                     <input type="text" class="input-mini" name="copItem.items[${dto_index-1}].singleBoxWeight"
                            value="${dto.singleBoxWeight}">
                   </td>
                 </tr>
                 <tr>
-                  <td>箱长</td>
+                  <th>箱长</th>
                   <td>
                     <input type="text" class="input-mini" name="copItem.items[${dto_index-1}].length" value="${dto.length}">
                   </td>
-                  <td>箱宽</td>
+                  <th>箱宽</th>
                   <td>
                     <input type="text" class="input-mini" name="copItem.items[${dto_index-1}].width" value="${dto.width}">
                   </td>
                 </tr>
                 <tr>
-                  <td>箱高</td>
+                  <th>箱高</th>
                   <td>
                     <input type="text" class="input-mini" name="copItem.items[${dto_index-1}].height" value="${dto.height}">
                   </td>
-                  <td>方案名</td>
+                  <th>方案名</th>
                   <td>
                     <input type="text" name="copItem.items[${dto_index-1}].schemeName" value="${dto.schemeName}">
                   </td>
@@ -98,23 +108,23 @@
           <div class="alert alert-info" id="add_div_1"><h4>方案1</h4></div>
           <table class="table table-condensed table-bordered">
             <tr>
-              <td>每箱数量</td>
+              <th>每箱数量</th>
               <td><input type="text" class="input-mini" name="copItem.items[0].boxSize" value="${copItem.boxSize}"></td>
-              <td>单箱重量</td>
+              <th>单箱重量</th>
               <td>
                 <input type="text" class="input-mini" name="copItem.items[0].singleBoxWeight" value="${copItem.singleBoxWeight}">
               </td>
             </tr>
             <tr>
-              <td>箱长</td>
+              <th>箱长</th>
               <td><input type="text" class="input-mini" name="copItem.items[0].length" value="${copItem.length}"></td>
-              <td>箱宽</td>
+              <th>箱宽</th>
               <td><input type="text" class="input-mini" name="copItem.items[0].width" value="${copItem.width}"></td>
             </tr>
             <tr>
-              <td>箱高</td>
+              <th>箱高</th>
               <td><input type="text" class="input-mini" name="copItem.items[0].height" value="${copItem.height}"></td>
-              <td>方案名</td>
+              <th>方案名</th>
               <td>
                 <input type="text" name="copItem.items[0].schemeName" value="">
               </td>
@@ -131,14 +141,14 @@
       </tr>
 
       <tr>
-        <td>产品要求</td>
+        <th>产品要求</th>
         <td colspan="3">
           <textarea rows="8" name="copItem.productTerms" class="input input-block-level">${copItem.productTerms}</textarea>
         </td>
       </tr>
 
       <tr>
-        <td>Memo</td>
+        <th>Memo</th>
         <td colspan="3">
           <textarea rows="8" name="copItem.memo" class="input input-block-level">${copItem.memo}</textarea>
         </td>
