--- a/core/app/views/Products/index.html
+++ b/core/app/views/Products/index.html
@@ -5,6 +5,12 @@
     #{script 'products/index.coffee'/}
 #{/set}
 
+<style>
+  .table td{
+    vertical-align:middle;
+  }
+</style>
+
 <div style="margin:5px 0 0;" class="row">
 #{flash_alert /}
 #{errorMsgs /}
