--- a/core/app/views/Products/show.html
+++ b/core/app/views/Products/show.html
@@ -13,6 +13,13 @@
 #{errorMsgs /}
 #{flash_alert /}
 
+#{warning_row ''}
+<ol>
+  <li>如果想在首页看到对应图片，可以在附件管理页面添加名字为0.jpg的图片</li>
+  <li>如果附件管理不能正常显示，请联系开发部</li>
+</ol>
+#{/warning_row}
+
 #{if pro == null}
 读取的 Product 不存在!
 #{/if}
