--- a/core/app/views/Sellings/index.html
+++ b/core/app/views/Sellings/index.html
@@ -73,7 +73,7 @@
 </form>
 
 <div class="row-fluid" style="overflow-x:auto;">
-  <table class="table table-bordered table-condensed" style="width:1700px;">
+  <table class="table table-bordered table-condensed">
     <tr>
       <th><input type="checkbox" class="checkall"></th>
       <th>编号</th>
