--- a/core/app/views/Products/_products.html
+++ b/core/app/views/Products/_products.html
@@ -8,12 +8,12 @@
     <th style="min-width:120px;">SKU</th>
     <th style="width:100px;">Family</th>
     <th>Name</th>
-    <th style="width:80px;">最近采购价格</th>
-    <th style="width:100px;">最近采购供应商</th>
-    <th style="width:80px;">产品状态</th>
-    <th style="width:80px;">销售级别</th>
-    <th>上市时间</th>
-    <th>退市时间</th>
+    <th style="width:90px;">最近采购价格</th>
+    <th style="width:120px;">最近采购供应商</th>
+    <th style="width:70px;">产品状态</th>
+    <th style="width:70px;">销售级别</th>
+    <th style="width:80px;">上市时间</th>
+    <th style="width:80px;">退市时间</th>
     <th style="width:100px;">Action</th>
   </tr>
     #{list items:prods, as:'prod'}
