--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -130,6 +130,9 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">物流模块<b class="caret"></b></a>
             <ul class="dropdown-menu">
+                #{power.ck "shipitems.indexb2b"}
+                  <li><a href="@{ShipItems.indexB2B()}">B2B运输</a></li>
+                #{/power.ck}
               <li><a href="@{ShipItems.index()}">快递运输</a></li>
                 #{power.ck "shipments.index"}
                   <li><a href="@{Shipments.index()}">运输单</a></li>
@@ -174,7 +177,7 @@
           </li>
         #{/power.ck}
 
-*{        #{power.ck 'saletarget'}
+        *{        #{power.ck 'saletarget'}
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">目标管理<b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -185,7 +188,7 @@
           </li>
         #{/power.ck}}*
 
-*{        #{power.ck 'qccheck'}
+        *{        #{power.ck 'qccheck'}
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">质检管理<b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -281,7 +284,7 @@
                 #{power.ck "fbacenters.index"}
                   <li><a href="@{FBACenters.index()}">FBACenter 管理</a></li>
                 #{/power.ck}
-*{                #{power.ck "categoryinfos.categoryassign"}
+            *{                #{power.ck "categoryinfos.categoryassign"}
                   <li><a href="@{CategoryInfos.categoryassign()}">部门品线负责人管理</a></li>
                 #{/power.ck}}*
             </ul>
