手动单调整B2B是否自提选项

--- a/core/app/views/ProcureUnits/editManualProcureUnit.html
+++ b/core/app/views/ProcureUnits/editManualProcureUnit.html
@@ -81,6 +81,11 @@
             <input type="checkbox" name="unit.isb2b" value="true" #{if unit.projectName=='B2B'} checked #{/if}>
             B2B
           </label>
+
+          <label class="checkbox inline">
+            <input type="checkbox" name="unit.isSelfPick" value="true" #{if unit.isSelfPick} checked #{/if}>客户自提
+          </label>
+
         </td>
       </tr>
 
