--- a/core/app/views/Deliveryments/manual.html
+++ b/core/app/views/Deliveryments/manual.html
@@ -59,7 +59,12 @@
       <label class="checkbox inline">
         <input type="checkbox" name="units[0].isb2b" value="true">B2B
       </label>
+
+      <label class="checkbox inline" style="display:none;">
+        <input type="checkbox" name="units[0].isSelfPick" value="true">客户自提
+      </label>
     </td>
+
   </tr>
 
   <tr id="btn_tr">
@@ -82,9 +87,9 @@
     <td>
       <input type="text" class="span1 inline" id="unit_price" name="units[<%= num %>].attrs.price">
       <select name="units[<%= num %>].attrs.currency" class="span1">
-        #{list items:helper.Currency.values(), as:'cr'}
-          <option ${cr == 'CNY' ? 'selected' : ''} value="${cr}">${cr}</option>
-        #{/list}
+      #{list items:helper.Currency.values(), as:'cr'}
+        <option ${cr == 'CNY' ? 'selected' : ''} value="${cr}">${cr}</option>
+      #{/list}
       </select>
   </tr>
   <tr>
@@ -102,12 +107,14 @@
   </tr>
   <tr>
     <th>B2B选项</th>
-    <td>
+    <td colspan="3">
       <label class="checkbox inline">
         <input type="checkbox" name="units[<%= num %>].isb2b" value="true">B2B
       </label>
+
+      <label class="checkbox inline" id="self_pick_label" style="display:none;">
+        <input type="checkbox" name="units[<%= num %>].isSelfPick" value="true">客户自提
+      </label>
     </td>
-    <th></th>
-    <td></td>
   </tr>
 </script>
