--- a/core/app/views/Shipments/_shipment_list.html
+++ b/core/app/views/Shipments/_shipment_list.html
@@ -14,6 +14,7 @@
     <th style="width:120px;">预计到库时间</th>
     <th style="width:40px;">创建者</th>
     <th style="width:100px;">出库单ID</th>
+    <th style="width:80px;">项目名称</th>
     <th style="width:150px;">请款单</th>
   </tr>
 #{list items:shipments, as:'ship'}
@@ -35,16 +36,17 @@
     <td>${ship.cooper?.name}</td>
     <td>${ship.internationExpress}</td>
     <td style="color:${ship.type.rgb()}">
-    ${ship.type.label()}<span style="color:red">${ship.isDedicated?'(专线)':''}</span>
+    ${ship.type?.label()}<span style="color:red">${ship.isDedicated?'(专线)':''}</span>
     </td>
     <td>${ship.whouse?.name}</td>
     <td style="color:${ship.state.rgb()}">${ship.state.label()}</td>
-    <td>#{time_tooltip time:ship.dates.planBeginDate/}</td>
+    <td>#{time_tooltip time:ship.dates?.planBeginDate/}</td>
     <td>${ship.showRealDay()}</td>
     <td>#{time_tooltip time:ship.createDate/}</td>
-    <td>#{time_tooltip time:ship.dates.planArrivDate/}</td>
+    <td>#{time_tooltip time:ship.dates?.planArrivDate/}</td>
     <td>${ship.creater?.username}</td>
     <td><a target="_blank" href="@{Outbounds.edit(ship.out?.id)}">${ship.out?.id}</a></td>
+    <td>${ship.projectName?.name()}</td>
     <td><a href="@{Applys.transport(ship.apply?.id)}">${ship.apply?.serialNumber}</a></td>
   </tr>
 #{/list}
